fix(angular-universal-vercel): working entrypoint

--- a/angular-universal-vercel/Dockerfile
+++ b/angular-universal-vercel/Dockerfile
@@ -2,7 +2,11 @@ FROM node:14
 
 RUN npm install -g vercel
 
+WORKDIR /app
+
 COPY vercel.json vercel.json
+
+COPY entrypoint.sh /entrypoint.sh
 
 COPY api api
 
