feat: allow inlined CSS and lazy-loaded modules to work

--- a/angular-universal-vercel/vercel.json
+++ b/angular-universal-vercel/vercel.json
@@ -3,7 +3,7 @@
     "public": true,
     "functions": {
         "api/serverless.js": {
-            "includeFiles": "browser/index.html",
+            "includeFiles": "{server/*.js,browser/{*.html,*.css}}",
             "runtime": "@vercel/node@1.8.5"
         }
     },
