feat(angular-universal-versl): include json files
Previously, json files were available to the serverless renderer.

Since it's fairly common to have static json documents included as
part of frontend builds, we've elected to make these available so
that server-side renderers can access these through the filesystem
instead of via self-refrencing http requests.

--- a/angular-universal-vercel/vercel.json
+++ b/angular-universal-vercel/vercel.json
@@ -3,7 +3,7 @@
     "public": true,
     "functions": {
         "api/serverless.js": {
-            "includeFiles": "{server/*.js,browser/{*.html,*.css}}",
+            "includeFiles": "{server/*.js,browser/{*.html,*.css},browser/**/*.json}",
             "runtime": "@vercel/node@1.8.5"
         }
     },
