--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "devDependencies": {
-    "@actions/core": "^1.10.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@actions/core": "^1.11.1",
+    "@types/node": "^20.17.27",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "esbuild": "^0.17.19",
-    "eslint": "^8.40.0",
-    "glob": "^10.2.3",
-    "jest": "^29.5.0",
-    "typescript": "^5.0.4"
+    "eslint": "^8.57.1",
+    "glob": "^10.4.5",
+    "jest": "^29.7.0",
+    "typescript": "^5.8.2"
   }
 }
