--- a/set-versions-from-root/tsconfig.json
+++ b/set-versions-from-root/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "moduleResolution": "nodenext",
+        "module": "NodeNext",
         "strict": true,
         "skipLibCheck": true
     },
