--- a/lighthouse-ci/action.yml
+++ b/lighthouse-ci/action.yml
@@ -19,11 +19,23 @@ inputs:
     required: false
     default: temporary-public-storage
 
+  config_path: 
+    description: The location of the lighthouse configuration file.
+    required: false
+
 runs:
   using: "composite"
   steps:
   - name: Run LHCI
-    run: npx -p @lhci/cli lhci autorun
+    run: | 
+      CMD="npx -p @lhci/cli lhci autorun"
+
+      if [[ -n "$INPUT_CONFIG_PATH" ]]; then
+        CMD+=" --config $INPUT_CONFIG_PATH"
+      fi
+
+      eval "$CMD"
+      set
     shell: bash
     env:
       LHCI_SERVER_BASE_URL: ${{ inputs.lhci_server_url }}
