--- a/.github/workflows/_internal-lhci.yml
+++ b/.github/workflows/_internal-lhci.yml
@@ -17,3 +17,4 @@ jobs:
       - uses: ./lighthouse-ci
         with:
           domain: https://www.example.com
+          config_path: .github/workflows/lhci/.lighthouserc.js
