--- a/lighthouse-ci/action.yml
+++ b/lighthouse-ci/action.yml
@@ -12,8 +12,7 @@ inputs:
   target:
     description: |
       The type of target to upload the data to. If set to anything other than "lhci", some of the options will not apply. [choices: "lhci",  "temporary-public-storage", "filesystem"]
-    required: false
-    default: temporary-public-storage
+    required: true
 
   domain:
     description: A base domain that can be used in a ".lighthouserc.js" to configure collect urls.
