--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@actions/core": "^1.11.1",
+    "@actions/glob": "^0.5.0",
     "@types/node": "^20.17.27",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
